[tool.poetry]
name = "mindreader"
version = "0.1.0"
description = ""
authors = ["Fabasoft 4teamwork AG"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.352"
python-dotenv = "^1.0.0"
chromadb = "^0.4.21"
gpt4all = "^2.0.2"
unstructured = {extras = ["pdf"], version = "^0.11.6"}
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
