[tool.poetry]
name = "mindreader"
version = "0.1.0"
description = ""
authors = ["Fabasoft 4teamwork AG"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.352"
python-dotenv = "^1.0.0"
chromadb = "^0.4.21"
click = "^8.1.7"
sentence-transformers = "^2.2.2"
pymupdf = "^1.23.8"
langserve = {extras = ["all"], version = "^0.0.37"}
uvicorn = "^0.25.0"
pydantic = "<2"
exceptiongroup = "^1.2.0"
async-timeout = "^4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
